{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 207,
  "lineage": "9035c319-b3d4-816f-a374-248ea8f3b539",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "csg5_chatacademico_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813303321040:internet-gateway/igw-0c17aa8c7a720dde8",
            "id": "igw-0c17aa8c7a720dde8",
            "owner_id": "813303321040",
            "tags": {
              "Name": "csg5-chatacademico-prod"
            },
            "tags_all": {
              "Name": "csg5-chatacademico-prod"
            },
            "vpc_id": "vpc-091d34e2da83fea28"
          },
          "dependencies": [
            "aws_vpc.csg5_chatacademico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "csg5_chatacademico_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:813303321040:loadbalancer/app/csg5-chatacademico-lb/75f6b94e186e6ea2",
            "arn_suffix": "app/csg5-chatacademico-lb/75f6b94e186e6ea2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "csg5-chatacademico-lb-65075772.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:813303321040:loadbalancer/app/csg5-chatacademico-lb/75f6b94e186e6ea2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "csg5-chatacademico-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0930578399269eb57",
              "sg-0b52ec25281c60551"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c8309aa811364403"
              },
              {
                "subnet_id": "subnet-0ec03a73f17256b05"
              }
            ],
            "subnets": [
              "subnet-0c8309aa811364403",
              "subnet-0ec03a73f17256b05"
            ],
            "tags": {
              "Name": "csg5-chatacademico-prod"
            },
            "tags_all": {
              "Name": "csg5-chatacademico-prod"
            },
            "vpc_id": "vpc-091d34e2da83fea28",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.csg5_chatacademico_http_sg",
            "aws_security_group.csg5_chatacademico_ssh_sg",
            "aws_subnet.csg5_chatacademico_public_sbn",
            "aws_subnet.csg5_chatacademico_public_sbn2",
            "aws_vpc.csg5_chatacademico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "csg5_chatacademico_tglb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:813303321040:targetgroup/csg5-chatacademico-tglb/b43b0f2f3ae15c92",
            "arn_suffix": "targetgroup/csg5-chatacademico-tglb/b43b0f2f3ae15c92",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:813303321040:targetgroup/csg5-chatacademico-tglb/b43b0f2f3ae15c92",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "csg5-chatacademico-tglb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091d34e2da83fea28"
          },
          "dependencies": [
            "aws_vpc.csg5_chatacademico_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "csg5_chatacademico_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813303321040:security-group/sg-0b52ec25281c60551",
            "description": "Created by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b52ec25281c60551",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Managed by Terraform.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Managed by Terraform.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "csg5-chatacademico-http-sg",
            "name_prefix": "",
            "owner_id": "813303321040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "csg5-chatacademico-prod"
            },
            "tags_all": {
              "Name": "csg5-chatacademico-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d34e2da83fea28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.csg5_chatacademico_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "csg5_chatacademico_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813303321040:security-group/sg-0930578399269eb57",
            "description": "Created by Terraform",
            "egress": [],
            "id": "sg-0930578399269eb57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Managed by Terraform.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "csg5-chatacademico-ssh-sg",
            "name_prefix": "",
            "owner_id": "813303321040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "csg5-chatacademico-prod"
            },
            "tags_all": {
              "Name": "csg5-chatacademico-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d34e2da83fea28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.csg5_chatacademico_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "csg5_chatacademico_public_sbn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813303321040:subnet/subnet-0c8309aa811364403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8309aa811364403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "813303321040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csg5-chatacademico-prod"
            },
            "tags_all": {
              "Name": "csg5-chatacademico-prod"
            },
            "vpc_id": "vpc-091d34e2da83fea28"
          },
          "dependencies": [
            "aws_vpc.csg5_chatacademico_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "csg5_chatacademico_public_sbn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813303321040:subnet/subnet-0ec03a73f17256b05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec03a73f17256b05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "813303321040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csg5-chatacademico-prod"
            },
            "tags_all": {
              "Name": "csg5-chatacademico-prod"
            },
            "vpc_id": "vpc-091d34e2da83fea28"
          },
          "dependencies": [
            "aws_vpc.csg5_chatacademico_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "csg5_chatacademico_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813303321040:vpc/vpc-091d34e2da83fea28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ed5c60e054e09724",
            "default_route_table_id": "rtb-06b96e68ee9f00171",
            "default_security_group_id": "sg-0bf1f74a297c187c0",
            "dhcp_options_id": "dopt-0398e1ea6d312cc8b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091d34e2da83fea28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b96e68ee9f00171",
            "owner_id": "813303321040",
            "tags": {
              "Name": "csg5-chatacademico-prod"
            },
            "tags_all": {
              "Name": "csg5-chatacademico-prod"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}